Fix SWIMMER Library issue-selector alignment
Remove double-container nesting and comment out now-unneeded margin-left override.

--- a/src/css/Common/toc.css
+++ b/src/css/Common/toc.css
@@ -1,5 +1,5 @@
 .issue-selector {
-  margin-left: -5px;
+  /* margin-left: -5px; */
 }
 .year-select {
   position: relative;
